web/client/stylesheets/pages/landing.scss
@import 'bourbon/bourbon'; // http://bourbon.io/

@import '../partials/variables'; // colors, fonts etc...

@import '../partials/mixins'; // custom mixins

@import '../partials/layout'; // responsive grid and media queries


/* cyrillic-ext */
@font-face {
  font-family: 'PT Sans';
  font-style: normal;
  font-weight: 400;
  src: local('PT Sans'), local('PTSans-Regular'), url(https://fonts.gstatic.com/s/ptsans/v8/fhNmDCnjccoUYyU4ZASaLVKPGs1ZzpMvnHX-7fPOuAc.woff2) format('woff2');
  unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
}
/* cyrillic */
@font-face {
  font-family: 'PT Sans';
  font-style: normal;
  font-weight: 400;
  src: local('PT Sans'), local('PTSans-Regular'), url(https://fonts.gstatic.com/s/ptsans/v8/BJVWev7_auVaQ__OU8Qih1KPGs1ZzpMvnHX-7fPOuAc.woff2) format('woff2');
  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
}
/* latin-ext */
@font-face {
  font-family: 'PT Sans';
  font-style: normal;
  font-weight: 400;
  src: local('PT Sans'), local('PTSans-Regular'), url(https://fonts.gstatic.com/s/ptsans/v8/oysROHFTu1eTZ74Hcf8V-VKPGs1ZzpMvnHX-7fPOuAc.woff2) format('woff2');
  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'PT Sans';
  font-style: normal;
  font-weight: 400;
  src: local('PT Sans'), local('PTSans-Regular'), url(https://fonts.gstatic.com/s/ptsans/v8/CWlc_g68BGYDSGdpJvpktgLUuEpTyoUstqEm5AMlJo4.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}
/* cyrillic-ext */
@font-face {
  font-family: 'PT Sans';
  font-style: normal;
  font-weight: 700;
  src: local('PT Sans Bold'), local('PTSans-Bold'), url(https://fonts.gstatic.com/s/ptsans/v8/kTYfCWJhlldPf5LnG4ZnHAsYbbCjybiHxArTLjt7FRU.woff2) format('woff2');
  unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
}
/* cyrillic */
@font-face {
  font-family: 'PT Sans';
  font-style: normal;
  font-weight: 700;
  src: local('PT Sans Bold'), local('PTSans-Bold'), url(https://fonts.gstatic.com/s/ptsans/v8/g46X4VH_KHOWAAa-HpnGPgsYbbCjybiHxArTLjt7FRU.woff2) format('woff2');
  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
}
/* latin-ext */
@font-face {
  font-family: 'PT Sans';
  font-style: normal;
  font-weight: 700;
  src: local('PT Sans Bold'), local('PTSans-Bold'), url(https://fonts.gstatic.com/s/ptsans/v8/hpORcvLZtemlH8gI-1S-7gsYbbCjybiHxArTLjt7FRU.woff2) format('woff2');
  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'PT Sans';
  font-style: normal;
  font-weight: 700;
  src: local('PT Sans Bold'), local('PTSans-Bold'), url(https://fonts.gstatic.com/s/ptsans/v8/0XxGQsSc1g4rdRdjJKZrNAzyDMXhdD8sAj6OAJTFsBI.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

@font-face {
    font-family: PT_Sans-Web-Regular;
    src: url(../fonts/PT_sans/PT_Sans-Web-Regular.ttf);
}

@font-face {
    font-family: PT_Sans-Web-Bold;
    src: url(../fonts/PT_sans/PT_Sans-Web-Bold.ttf);
}


body{
	font-family: 'PT Sans';
	background-color: white;
	color: #330033;
	min-height: 100%;
	padding: 0;
	margin: 0;
}

h1 {
	font-weight: 700;
}

h3 {
	font-weight: 400;
	font-size: 2em;
}

h2 {
	font-size: 700;
	font-size: 2.5em;
}

p {
	font-size: 1.3em;
}

.default {
	padding-top: 100px;
	height: 100vh;
}
.navbar {
	background-color: #330066;
	font-size: 1em;
	border-style: none;
	border-color:inherit;

	.navbar-header {	

		.navbar-brand {
		    position: relative;
		    left: 0;
		    margin-left:20%;
		    text-align: center;
		    margin: auto;
		    color: white;
		    display: inline-block;
		    font-size: 1.3em;
		    letter-spacing: .3em;
		}
		#navbar-logo {
			position: absolute;
	    	text-align: left;
	    }
	}

	#navbar-center {
		display:inline-block;
		float:none;
		margin-left:20%;
		li {
			display: inline-block;
			a {
				color: white;
				font-weight: 400;
			}
		}
	}	
	button {
		font-size: 1em;
	}

	.navbar-right {
		font-size: 1em;
		li {
				a {
					color: white;
					.login-link-text {
						color: white;
					}
					a {
						color: black;

					}
				}
                a:hover {
                    color: rgba(255, 255, 255, 0.7);
                }
		}
		.bc-button {
			border: 2px solid;
  			font-size: 1.3em;
  			margin-top: -5px;
  			line-height: 1.3em;
		}
        .bc-button:hover {
            color: #330066;
            background-color: white;
        }
	}


}

.row {
	margin-bottom: 50px;
}

.jumbotron {
	background-image: url("/images/landing/breadcrumbs-bg.png");
	background-size: 100%;
	min-height:700px;
	display: table;
	width: 100%;
	.layover{
		height:100%;
		// background-color: white;
		opacity: 0.8;
		display: table-cell;
    	vertical-align: middle;
    	text-align: center;
	}
	.jumbotron-header {
		background-color: white;
		padding: 5%;
		h3 {
			margin-bottom: 40px;
		}
	}
}

.bc-button {
	font-size: 2em;
	border: 2px solid;
	background-color: inherit;
    transition: background-color 0.4s ease;
}

.bc-button:hover {
    color: white;
    background-color: rgb(65, 48, 124);
}

.about-us {
	min-height:700px;
	display: table;
	width:100%;
	text-align: center;
	padding-left: 70px;
	padding-right: 70px;
	img {
		height:150px;
	}
	h2 {
		margin-bottom:100px;
	}
}

.how-it-works {
	min-height:700px;
	background-color: #E2E2E2;
	img {
		height: 250px;
	}
	h2 {
		margin-bottom: 50px;
	}
	p {
		margin-bottom: 80px;
	}
}

.supported-sites {
	min-height:700px;
	text-align: center;
	h3 {
		text-align: left;
	}
	img {
		height: 100px;
		margin-top: 25px;
	}
	#supported-divider {
		border-right: 1px solid black;
	}
}

footer {
	background-color: #E2E2E2;
	width: 100%;
	height:50px;
	img {
		height: 30px;
	}
	.navbar-brand {
		letter-spacing: .3em;
	}
}

